// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crm/contacts/sendgrid Create should perform successfully 1`] = `
Ok {
  "value": Object {
    "id": null,
  },
}
`;

exports[`crm/contacts/sendgrid Create should return error if email is missing 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Missing field\\",
  \\"detail\\": \\"SendGrid requires email on contact\\"
}
AST Path: definitions[0].statements[0]
Original Map Location: Line 5, column 3",
}
`;

exports[`crm/contacts/sendgrid Search should perform successfully 1`] = `
Ok {
  "value": Array [
    Object {
      "country": "",
      "customProperties": Object {
        "test": "value",
      },
      "email": "test@example.com",
      "firstName": "test",
      "id": "ed62c84e-59fe-4bb5-8a96-323b1b5db10b",
      "lastName": "",
      "phone": "",
    },
  ],
}
`;

exports[`crm/contacts/sendgrid Search should return error if unknow operator is used 1`] = `
Err {
  "error": "InputValidationError: Input validation failed:
Path: input.operator
Error: Invalid enum value: \\"%\\"",
}
`;

exports[`crm/contacts/sendgrid Update should perform successfully 1`] = `
Ok {
  "value": Object {
    "id": "test@example.com",
  },
}
`;

exports[`crm/contacts/sendgrid Update should return error if email is missing 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Missing field\\",
  \\"detail\\": \\"You must specify id or email to identify contact\\"
}
AST Path: definitions[1].statements[0]
Original Map Location: Line 70, column 3",
}
`;
